game area html hacked up

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" ng-app="201412Solo">
+<html class="no-js" ng-app="appMaze">
   <head>
     <meta charset="utf-8">
     <title>201412Solo</title>
