--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,8 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <script src="../node_modules/three-first-person-controls/index.js"></script>
+
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
     <!-- inject:js -->
     <!-- js files will be automaticaly insert here -->
